# rust-codespaces

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  Makefile  README.md  STATUS.md  TEMPLATE_IMPROVEMENTS.md  customize-template.sh  docker-compose.yml  rustfmt.toml  setup-hooks.sh  test_ci.sh
.devcontainer/: devcontainer.json  setup.sh
.githooks/: pre-commit
.github/: template.yml
.github/workflows/: ci.yml
examples/cli_tool/: Cargo.toml
examples/cli_tool/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/my_lib/: Cargo.toml
examples/my_lib/benches/: calculator_bench.rs
examples/my_lib/src/: lib.rs
examples/wasm_example/: Cargo.toml  index.html
examples/wasm_example/src/: lib.rs
examples/web_server/: Cargo.toml
examples/web_server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
